[gd_scene load_steps=6 format=3 uid="uid://ctfquwt4pd13f"]

[ext_resource type="Script" uid="uid://pxuq6qhaxg4v" path="res://assets/scenes/menus/game_end_screen.gd" id="1_uooxh"]
[ext_resource type="AudioStream" uid="uid://bognfff4xxhju" path="res://assets/audio/events/fanfare.wav" id="2_7omlc"]
[ext_resource type="AudioStream" uid="uid://p1frobklflla" path="res://assets/audio/quack/quack-15.wav" id="3_ox1vd"]

[sub_resource type="Gradient" id="Gradient_qclk0"]
offsets = PackedFloat32Array(0, 0.42, 0.50666666, 0.5133333, 1)
colors = PackedColorArray(0.50281674, 0.6633021, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0.5137255, 0, 1, 0.6238186, 1, 0.5938983, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uooxh"]
gradient = SubResource("Gradient_qclk0")
fill_to = Vector2(0, 1)

[node name="GameEndScreen" type="Node2D"]
script = ExtResource("1_uooxh")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_uooxh")

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSpacer" type="Control" parent="MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Content" type="Control" parent="MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/HBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopSpacer" type="Control" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="GameoverLabel" type="RichTextLabel" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 22
theme_override_font_sizes/normal_font_size = 64
text = "Game over!"
fit_content = true
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="RescueCountLabel" type="RichTextLabel" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 22
theme_override_font_sizes/normal_font_size = 64
text = "You rescued X sheep"
fit_content = true
horizontal_alignment = 1

[node name="BottomSpacer" type="Control" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="BackToMenuButton" type="Button" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Return to menu"

[node name="VeryBottomSpacer" type="Control" parent="MenuContainer/HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="RightSpacer" type="Control" parent="MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="winfare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7omlc")

[node name="lossfare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ox1vd")

[connection signal="pressed" from="MenuContainer/HBoxContainer/Content/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
